syntax = "proto3";
package msgapi;

option go_package = "/api";

service ChatMessageService {
    rpc SendMessage(stream ChatMessage) returns (MessageAck) {};
    rpc JoinChannel(ConnectionRequest) returns (stream ChatMessage) {};
}

message ChatMessage{
  string senderID = 1;
  string channelName = 2;
  string message = 3;
}

message MessageAck {}

message ConnectionRequest {
  string userID = 1;
  string channelName = 2;
}

message SuccessEmptyResponse {}
